; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_stream_new.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_stream_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_stream_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_stream_new(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @vlclua_get_this(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i8* @luaL_checkstring(i32* %8, i32 1)
  store i8* %9, i8** %4, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32* @vlc_stream_NewMRL(i32* %10, i8* %11)
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @vlclua_stream_new_inner(i32* %13, i32* %14)
  ret i32 %15
}

declare dso_local i32* @vlclua_get_this(i32*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32* @vlc_stream_NewMRL(i32*, i8*) #1

declare dso_local i32 @vlclua_stream_new_inner(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
